Add starting code for login
